@@ -1,5 +1,10 @@
 2008-11-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
+	* Makefile.PL: Unconditionally use META_MERGE.  Tell the CPAN
+	indexer to ignore the directories "tools" and "xs".
+
+2008-11-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>
+
 	* Gtk2.pm: Link to Pango.
 
 2008-11-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>
